Finish renaming, update readme